# inspira

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
app/src-tauri/capabilities/: README.md  default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: README.md  lib.rs  main.rs
services/: Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
services/alembic/: README.md  env.py
services/alembic/versions/: 20260421_0001_baseline.py  20260421_0002_shelves.py  20260421_0003_share_tokens.py  20260422_0001_credits_balance_constraint.py  20260422_0002_missing_runtime_tables.py  20260422_0003_drop_v1_project_fks.py  20260422_0004_user_model_tier.py  20260422_0005_project_archived_at.py  20260422_0006_topic_private_notes.py  20260422_0007_user_byok.py  20260422_0008_user_access_tokens.py  20260424_0001_drop_credits_and_voice.py  20260424_0002_add_terms_accepted_at.py  20260428_0001_tier_usage_and_business_plan_caps.py  20260428_0002_next_steps_artifacts.py  20260429_0001_merge_next_steps_into_byok_terms.py  20260429_0002_business_plan_phases.py  (+17 more)
services/inspira_mcp/: __init__.py  __main__.py  auth.py  markdown_export.py  schemas.py  server.py  tool_handlers.py
services/planning_studio_service/: __init__.py  __main__.py  _env_bootstrap.py  api.py  app.py  artifact_comments_router.py  auth.py  bearer_auth.py  byok.py  cascade_router.py  cascade_store.py  cleanup_jobs.py  config.py  dedupe_merge.py  entitlements.py  example_projects.py  health_routes.py  homepage.py  json_import.py  locale.py  locks.py  markdown_import.py  orchestrator_router.py  orchestrator_store.py  project_state.py  realtime.py  search.py  sharing.py  shelves.py  sse.py  store.py  thinking_messages.py  validators.py
services/scripts/: backup.sh  check_migrations.py  create_admin_user.py  dev.sh  migrate.sh  reset-local-db.sh  reset_password_link.py  restore.sh  smoke_provider_swap.py  test_restore.py  try_kickoff.py
services/tests/: _github_helpers.py  _helpers.py  test_access_tokens.py  test_activity_timeline.py  test_anonymous_to_account.py  test_anthropic_adapter.py  test_api_fastapi.py  test_artifact_comments.py  test_artifact_endpoints.py  test_auth_routes.py  test_auth_samesite_option_a.py  test_auth_security_pr1.py  test_billing_period.py  test_byok.py  test_canvas_mutation_loop.py  test_cascade_dispatch.py  test_cascade_routes.py  test_cascade_scope.py  test_cascade_store.py  test_checkpoints.py  test_cleanup_jobs.py  test_conflict_resolution.py  test_connectors_endpoints.py  test_connectors_f4_endpoints.py  test_connectors_package.py  test_dedupe_merge.py  test_document_endpoints.py  test_email_senders.py  test_entitlements.py  test_example_projects.py  test_exports.py  test_extra_modes.py  test_feedback_items_classify.py  test_feedback_items_clustering.py  test_feedback_items_f6_override.py  test_feedback_items_llm_classify.py  test_feedback_items_store.py  test_forgot_password.py  test_github_app_jwt.py  test_github_client.py  (+57 more)
(+582 files in other folders)
