[project]
name = "planning-studio-service"
version = "0.1.0"
description = "Backend foundation for Inspira (repo codename: planning-studio)."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.54.0",           # planner interviewer — first provider adapter
  "python-dotenv>=1.0",       # load OPENAI_API_KEY and friends from .env during dev
  "fastapi>=0.115.0",         # production HTTP layer (was stdlib BaseHTTPServer)
  "uvicorn[standard]>=0.32",  # ASGI server for FastAPI
  "pydantic[email]>=2.9",     # request/response models (comes with FastAPI but pinned)
  "email-validator>=2.2",     # required by EmailStr
  "sqlalchemy>=2.0",          # used only for the alembic migration harness
  "alembic>=1.13",             # schema migrations
  "psycopg[binary]>=3.2",     # Postgres driver; no-op when DATABASE_URL stays sqlite
  "argon2-cffi>=23.1",        # password hashing for auth
  "itsdangerous>=2.2",        # signed session cookies
  "slowapi>=0.1.9",           # per-IP request rate limits
  "pybreaker>=1.2",           # circuit breaker around the OpenAI adapter
  "httpx>=0.27",              # Claude fallback + internal test client
  # Pinned (not unbounded floor) so a `pip install -U` can't silently
  # break tool-use parsing in claude_adapter.py. Bump explicitly via a
  # PR that runs the adapter integration tests against the new SDK.
  "anthropic==0.96.0",        # Claude Sonnet backs the frontier model tier (+ OpenAI fallback)
  "sentry-sdk[fastapi]>=2.17", # error tracking, gated by SENTRY_DSN
  "markdown>=3.5",             # markdown-to-HTML for the /from-markdown import preview
  "mcp>=1.0",                  # MCP server SDK for the inspira_mcp process (Claude.ai surface)
  "cryptography>=44.0",        # Fernet symmetric encryption for BYOK at-rest
  # Pinned upper bound: Stripe ships breaking SDK changes on majors. 12.x +
  # 13.x are current at the 2026-05-12 Live cutover; bump intentionally in
  # a PR that runs the billing pytest suite against the new SDK. The
  # lazy-import in StripeBillingProvider._stripe() means deploys without
  # this dep still boot — but the checkout endpoint 500s when Stripe is
  # actually called. Pin to dep tree so no live deploy can run without it.
  "stripe>=12.0,<14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["planning_studio_service", "inspira_mcp"]

[tool.pytest.ini_options]
pythonpath = ["services"]
