[package]
name = "planning-studio-shell"
version = "0.1.0"
description = "Desktop shell for Planning Studio"
authors = ["duranjh"]
edition = "2021"

[lib]
name = "planning_studio_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
